# Halendar

./: DEPLOYMENT.md  DateTime.hs  Event.hs  Main.hs  MainStatic.hs  Makefile  Model.hs  README.md  Update.hs  View.hs  cabal.project  cal.css  calApp.cabal  flake.nix  stack.yaml
.github/workflows/: build.yml  deploy.yaml  deploy.yml
static/: index.html
