cabal-version:      2.4
name:               calApp
version:            0.1.0.0

-- IMPORTANT NOTE:
-- This project is designed to work with ghc 8.10.7 (base 4.14.3.0).
-- So, run `ghcup set ghc 8.10.7` before `cabal run wordle-miso`

-- You can turn off these warnings if you'd like.
common warnings
    ghc-options: -Wall

common wasm
    if arch(wasm32)
        ghc-options:
            -no-hs-main
            -optl-mexec-model=reactor
            "-optl-Wl,--export=hs_start"
        cpp-options:
            -DWASM

executable calApp
    import:           warnings, wasm
    main-is:          Main.hs
    other-modules:    DateTime, Event, Model, View, Update
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      random,
                      -- Not using 1.8.3.0 because Hackage docs don't work
                      miso ==1.8.2.0,
                      time
    if !arch(wasm32)
        build-depends: jsaddle-warp ^>=0.9.8.2
    hs-source-dirs:   .
    default-language: Haskell2010