cabal-version:          3.0
name:                   calApp
version:                0.1.0.0

common options
  if impl(ghcjs) || arch(javascript)
    cpp-options:
      -DGHCJS_BOTH
  if impl(ghcjs)
    cpp-options:
      -DGHCJS_OLD
  elif arch(javascript)
    cpp-options:
      -DGHCJS_NEW
  elif arch(wasm32)
    ghc-options:
      -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
    cpp-options:
       -DWASM
  else
    cpp-options:
      -DVANILLA

executable calApp
    import:
        options
    main-is:          Main.hs
    other-modules:    DateTime, Event, Model, View, Update
    build-depends:    
        base,
        containers,
        random,
        jsaddle-warp,
        miso,
        time
    hs-source-dirs:   .
    default-language: GHC2021
    default-extensions:
        CPP TemplateHaskell